--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
     display: flex;
         align-items: center;
+        flex-direction: column;
   }
 
   p{
@@ -13,6 +14,18 @@ body{
     padding: 20px;
     width: 100%;
         box-sizing: border-box;
+        height: -webkit-fill-available;
+    align-content: center;
+    justify-items: center;
+}
+
+#game-lobby-container {
+    flex-direction: column;
+    width: 100%;
+}
+
+div#auth-container {
+    gap: 10px;
 }
 
 .board {
@@ -24,12 +37,13 @@ body{
     display: grid;
     grid-gap: 0;
     flex-direction: column;
-        padding: 20px;
+    padding: 20px;
     width: 100%;
     box-sizing: border-box;
     aspect-ratio: 1;
     display: grid;
     grid-gap: 0;
+    display: none;
 }
 
 .box{
