--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,11 @@ body{
     background-color:#9bd1f7;
     margin: 0;
     display: flex;
-        align-items: center;
-        flex-direction: column;
-            font-family: sans-serif;
+    align-items: center;
+    flex-direction: column;
+    font-family: sans-serif;
+    justify-content: space-between;
+    height: 100vh;
   }
 
   p{
@@ -19,7 +21,6 @@ body{
     padding: 20px;
     width: 100%;
         box-sizing: border-box;
-        height: -webkit-fill-available;
     align-content: center;
     justify-items: center;
 }
