--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,15 @@ body{
     display: flex;
 }
 
-#game-container {
+.game-layout {
     width: 100%;
     justify-content: space-between;
     padding: 20px;
     box-sizing: border-box;
+}
+
+#game-container {
+    flex-direction: column;
 }
 
 .board {
@@ -54,6 +58,7 @@ body{
     aspect-ratio: 1;
     display: grid;
     grid-gap: 0;
+    margin: auto;
 }
 
 .box{
