--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,14 @@ body{
     justify-content: space-between;
     padding: 20px;
     box-sizing: border-box;
+    flex-direction: row;
+    display: flex;
 }
 
 #game-container {
     flex-direction: column;
+    width: 100%;
+    height: 100%;
 }
 
 .board {
