--- a/css/style.css
+++ b/css/style.css
@@ -92,17 +92,17 @@ body{
 }
 
 .player-name.player_1 {
-    color: #1976d2; /* Example: blue for player 1 */
+    color: #6bca57; /* Green for player 1 */
     background-color: unset;
 }
 
 .player-name.player_2 {
-    color: #d32f2f; /* Example: red for player 2 */
+    color: #d32f2f; /* Red for player 2 */
     background-color: unset;
 }
 
 .player-name.player_1.your-turn {
-    border-bottom: 2px solid #1976d2;
+    border-bottom: 2px solid #6bca57;
     padding-bottom: 4px;
 }
 
