--- a/css/style.css
+++ b/css/style.css
@@ -48,14 +48,6 @@ body{
 }
 
 .board {
-    width: 90vw;
-    height: 90vw;
-    position: relative;
-    justify-self: center;
-    position-area: center;
-    display: grid;
-    grid-gap: 0;
-    flex-direction: column;
     padding: 20px;
     width: 100%;
     box-sizing: border-box;
@@ -63,6 +55,17 @@ body{
     display: grid;
     grid-gap: 0;
     margin: auto;
+}
+
+#timer-container{
+    padding: 20px;
+}
+
+#player-names-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
 }
 
 .box{
