Hide auth container by default and update display logic based on user authentication state

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ input{
     justify-content: center;
     display: flex;
     color: white;
+    display: none; /* Hide auth container by default to avoid flash on load */
 }
 
 .game-layout {
